[package]
name = "ronfsd"
version = "0.1.0"
authors = ["Nathan Ringo <remexre@gmail.com>"]

[dependencies]
either = "1.5.0"
failure = "0.1.1"
iron = "0.6.0"
log = "0.4.1"
logger = "0.4.0"
mount = "0.4.0"
persistent = "0.4.0"
stderrlog = { git = "https://github.com/remexre/stderrlog-rs.git" }
structopt = "0.2.6"
